--- a/public/stylesheets/userDataPage.css
+++ b/public/stylesheets/userDataPage.css
@@ -8,7 +8,8 @@
 body {
   background-color: #e8f5ff;
   font-family: Arial;
-  overflow: hidden;
+  /* overflow: hidden; */
+  height: 100vh;
 }
 
 /* NavbarTop */
