--- a/views/userDataPage.ejs
+++ b/views/userDataPage.ejs
@@ -129,7 +129,11 @@
 
                   <tr>
                     <td>
-                      <a href="/edit/<%= user._id %>" class="text-blue">edit</a>
+                      <a
+                        href="/edit/<%= user._id %>"
+                        class="bg-red-400 px-4 py-1 text-white rounded"
+                        >edit</a
+                      >
                       <a href="/delete/<%= user._id %>" class="text-red"
                         >delete</a
                       >
