--- a/views/userDataPage.ejs
+++ b/views/userDataPage.ejs
@@ -131,10 +131,12 @@
                     <td>
                       <a
                         href="/edit/<%= user._id %>"
-                        class="bg-red-400 px-4 py-1 text-white rounded"
+                        class="bg-green-500 px-4 py-1 text-white rounded"
                         >edit</a
                       >
-                      <a href="/delete/<%= user._id %>" class="text-red"
+                      <a
+                        href="/delete/<%= user._id %>"
+                        class="bg-red-400 px-4 py-1 text-white rounded"
                         >delete</a
                       >
                     </td>
