--- a/views/userDataPage.ejs
+++ b/views/userDataPage.ejs
@@ -46,7 +46,7 @@
               </a>
             </li>
             <li>
-              <a href="#sign-out">
+              <a href="/logout">
                 <i class="fa fa-sign-out-alt fa-2x"></i>
               </a>
             </li>
